--- a/squid/forward.conf
+++ b/squid/forward.conf
@@ -3,4 +3,6 @@ logformat combined %>a %>A %ui %un [%tl] "%rm %ru HTTP/%rv" %Hs %<st "%{Referer}
 logfile_rotate 0
 access_log tcp://192.168.189.100:1025
 dns_nameservers 10.10.1.6
+acl ban_domains dstdomain "/etc/squid/ban_domains.txt" 
+http_access deny ban_domains
 http_access allow all
