--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,16 +21,17 @@ services:
     image: sameersbn/squid:3.5.27-2
     volumes:
       - ./squid/forward.conf:/etc/squid/squid.conf
+      - ./squid/ban_domains.txt:/etc/squid/ban_domains.txt
     restart: always
     networks:
       backend:
-      network-services_vlan:
-        ipv4_address: 10.10.1.11
+      frontend:
     ports:
-      - 10.10.1.11:3128:3128
+      - 10.10.1.10:3128:3128
     depends_on:
       - elastic
   elastic:
+    restart: always
     build: ./elk
     volumes:
       - ./elk/logs:/var/lib/elasticsearch
@@ -66,5 +67,3 @@ networks:
       config:
       - subnet: 192.168.189.0/24
   frontend:
-  network-services_vlan:
-    external: true    
