--- a/squid/forward.conf
+++ b/squid/forward.conf
@@ -1,6 +1,7 @@
 http_port 3128 
 logformat combined %>a %>A %ui %un [%tl] "%rm %ru HTTP/%rv" %Hs %<st "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh
 logfile_rotate 0
-access_log tcp://192.168.189.100:1025
-dns_nameservers 10.10.1.6
+cache_log stdio:/dev/stdout
+access_log stdio:/dev/stdout
+cache_store_log stdio:/dev/stdout
 http_access allow all
