--- a/elk/logstash.conf
+++ b/elk/logstash.conf
@@ -1,27 +1,72 @@
-# input {
-#   udp {
-#       port => 10514
-#       type => "syslog"
-#       codec => "json"
-#   }
-# }
 input {
-  tcp {
-        port => 1025
-        type => "squid-access"
-   }
+#    tcp {
+#        port => 5000
+#        type => "syslog"
+#    }    
+    
+#    udp {
+#        port => 5000
+#        type => "syslog"
+#    }
+
+    syslog {
+        grok_pattern => "%{SYSLOG5424BASE}"
+        port => 5000
+        type => "SerilogTcp"
+    }
+
+    # syslog {
+    #     grok_pattern => "%{SYSLOG5424BASE}"
+    #     port => 5001
+    #     type => "SerilogUdp"
+    # }
+
+    # syslog {
+    #     grok_pattern => "%{SYSLOG5424BASE}"
+    #     port => 5002
+    #     type => "NLogTcp"
+    # }
+
+    # syslog {
+    #     grok_pattern => "%{SYSLOG5424BASE}"
+    #     port => 5003
+    #     type => "NLogUdp"
+    # }
 }
 
 filter {
   grok {
     match => {
-        "message" => "%{POSINT:timestamp}.%{WORD:timestamp_ms}\s+%{NUMBER:response_time} %{IPORHOST:src_ip} %{WORD:squid_request_status}/%{NUMBER:http_status_code} %{NUMBER:reply_size_include_header} %{WORD:http_method} %{NOTSPACE:request_url} %{NOTSPACE:user} %{WORD:squid}/%{IP:server_ip} %{NOTSPACE:content_type}"
+        message => "%{SYSLOG5424LINE}"
     }
+    # add_field => { "raw_message" => "%{message}" }
+  }
+
+  date {
+    match => [ "syslog5424_ts", "ISO8601" ]
+    remove_field => "syslog5424_ts"
+  }
+
+  syslog_pri { 
+    syslog_pri_field_name => "syslog5424_pri"
+    remove_field => "syslog5424_pri"
+  }
+
+  json {
+    source => "syslog5424_msg"
+    remove_field => "syslog5424_msg"
+  }
+
+  useragent {
+    source => "useragent"
+    remove_field => "useragent"
   }
 }
+  
 output {
-    elasticsearch {
-      hosts => "127.0.0.1:9200"
-      index => "syslog-%{+YYYY.MM.dd}"    
-    }
+  elasticsearch {
+   hosts => ["localhost:9200"]
+   index => "logstash-%{+yyyy.MM.dd}"
+  }
+  stdout { }
 }
