--- a/squid/reverse.conf
+++ b/squid/reverse.conf
@@ -1,6 +1,7 @@
 http_port 80 accel vhost
 
-acl kibana dst 10.10.1.10
+acl kibana dst 192.168.1.38
 cache_peer 192.168.189.100 parent 5601 0 no-query originserver name=kib1
 cache_peer_access kib1 allow kibana
 http_access allow kibana
+http_access allow all
