--- a/squid/forward.conf
+++ b/squid/forward.conf
@@ -1,6 +1,6 @@
 http_port 3128 
 logformat combined %>a %>A %ui %un [%tl] "%rm %ru HTTP/%rv" %Hs %<st "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh
 logfile_rotate 0
-access_log tcp://192.168.189.100:1025
-dns_nameservers 10.10.1.6
+access_log tcp://192.168.189.100:5000
+# dns_nameservers 192.168.1.1
 http_access allow all
