--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,9 @@ services:
     networks:
       backend:
         ipv4_address: 192.168.189.100
-    ports:
-      - 5601:5601
-      - 9200:9200
+    # ports:
+    #   - 5601:5601
+    #   - 9200:9200
     environment:
       - ES_HEAP_SIZE=4g
       - KIBANA_START=1
