--- a/squid/forward.conf
+++ b/squid/forward.conf
@@ -1,8 +1,7 @@
 http_port 3128 
-logformat combined %>a %>A %ui %un [%tl] "%rm %ru HTTP/%rv" %Hs %<st "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh
+logformat referrer   %ts.%03tu %>a %{Referer}>h %ru
 logfile_rotate 0
-access_log tcp://192.168.189.100:1025
-dns_nameservers 10.10.1.6
-acl ban_domains dstdomain "/etc/squid/ban_domains.txt" 
+access_log tcp://10.10.1.193:1025
+acl ban_domains dstdom_regex "/etc/squid/ban_domains.txt" 
 http_access deny ban_domains
 http_access allow all
